pkgs/core/test/fixtures/config-parser/invalid/invalid-source-prefix-https/.boxfilesrc
{
  "plugins": {
    "copy": "https://example.com/boxfiles/provider-copy.git"
  }
}
